--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <string name="action_example">Example action</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_about">About</string>
+    <string name="about">This app is made by dOOP (dat Object Oriented Programming) club!</string>
+    <string name="help">Read the man page</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
