--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,12 @@
     <string name="about">This app is made by dOOP (dat Object Oriented Programming) club!</string>
     <string name="help">Read the man page</string>
 
+    <string name="feedback_info">Yay! Feedback! [Describe Describe Describe Blah Blah Blah]</string>
+    <string name="feedback_entry">Enter Feedback</string>
+    <string name="feedback_button">Submit Feedback</string>
+    <string name="type_suggest_feature">Suggest Feature</string>
+    <string name="type_report_bug">Report Bug</string>
+    <string name="type_other">Other</string>
+
     <string name="hello_world">Hello world!</string>
 </resources>
