--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">AA Schedule</string>
-
     <string-array name="sidebar_options">
         <item>View Schedule</item>
         <item>Edit Schedule</item>
@@ -11,20 +10,25 @@
     </string-array>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="action_example">Example action</string>
-
     <string name="action_settings">Settings</string>
     <string name="title_activity_about">About</string>
     <string name="about">This app is made by dOOP (dat Object Oriented Programming) club!</string>
     <string name="help">Read the man page</string>
-
     <string name="feedback_info">Yay! Feedback! [Describe Describe Describe Blah Blah Blah]</string>
     <string name="feedback_entry">Enter Feedback</string>
     <string name="feedback_button">Submit Feedback</string>
     <string name="type_suggest_feature">Suggest Feature</string>
     <string name="type_report_bug">Report Bug</string>
     <string name="type_other">Other</string>
-
     <string name="hello_world">Hello world!</string>
+
+    <!-- File/pref names:-->
+    <string name="pref_storage">storage</string> <!--used for storing data-->
+    <string name="schedule_JSON">schedule_JSON</string>
+    <string name="JSON_period_start_time">per_start_time</string>
+    <string name="JSON_period_end_time">per_end_time</string>
+    <string name="JSON_period_class_name">per_class_name</string>
+    <string name="JSON_period_room">per_room</string>
+    <string name="JSON_period_block">per_block</string>
 </resources>
