--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,8 +39,10 @@
     <string name="select_start">Select Start Time</string>
     <string name="select_end">Select End Time</string>
     <string name="free_name">Free</string>
-    <string name="insane_time">Invalid time. Please enter a time between 8:00AM and 3:32PM.</string>
+    <string name="insane_time12">Invalid time. Please enter a time between 8:00AM and 3:32PM.</string>
+    <string name="insane_time24">Invalid time. Please enter a time between 8:00 and 15:32.</string>
     <string name="misordered_time">The start time actually goes <i>before</i> the end time.</string>
+    <string name="notes_hint">Tap to add notes</string>
 
     <string name="hello_world">Hello world!</string>
 
@@ -64,4 +66,5 @@
     <string name="JSON_period_type">per_type</string>
     <string name="JSON_period_color">per_color</string>
     <string name="JSON_period_has_color">per_has_color</string>
+    <string name="JSON_period_notes">per_notes</string>
 </resources>
