--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,17 @@
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_about">About</string>
-    <string name="about">This app is made by dOOP (dat Object Oriented Programming) club!</string>
-    <string name="help">Read the man page</string>
-    <string name="feedback_info">Yay! Feedback! [Describe Describe Describe Blah Blah Blah]</string>
+    <string name="about">
+        This app is made by dOOP (dat Object Oriented Programming) club! \n\n
+        \t\tProgramming: Max Johnson, Dylan Hendrickson \n
+        \t\tDesign and testing: Tanek Ballachanda, Channing Cimarusti, Emma Wellman, Andrew Jones \n\n
+        \t\tInterested in learning how to make apps and potentially taking over maintenance of <i>this</i> app? Send an email to Max at johm160@aa.edu.</string>
+    <string name="help">
+        \t\tView Schedule displays your schedule. It will default to the current day. \n\n
+        \t\tEdit Schedule allows you to change your schedule. The first page lets you edit classes by block - you can set the name, room, and color of an entire block. The next pages let you edit individual periods. The final page lets you load a new schedule. \n\n
+        \t\tFeedback sends an email to the development team. Send us your compliments, criticisms, suggestions for features, bugs, deep thoughts, unwanted children, and snacks.
+    </string>
+    <string name="feedback_info">Questions? Comments? Concerns?</string>
     <string name="feedback_entry">Enter Feedback</string>
     <string name="feedback_button">Submit Feedback</string>
     <string name="type_suggest_feature">Suggest Feature</string>
@@ -45,6 +53,13 @@
     <string name="notes_hint">Tap to add notes</string>
     <string name="edit_block_label">Edit Block</string>
     <string name="edit_per_label">Edit Period</string>
+    <string name="get_sch_title">Make a new schedule</string>
+    <string name="get_sch_download">Download Your Schedule</string>
+    <string name="get_sch_10_12">Use 10-12 Template</string>
+    <string name="get_sch_8_9">Use 8-9 Template</string>
+    <string name="get_sch_6_7">Use 6-7 Template</string>
+    <string name="get_sch_sample">Use Sample Schedule</string>
+    <string name="PSA_re_editing">Default loaded. Go to the first page of Edit Schedule to fill in the names of each block.</string>
 
     <string name="hello_world">Hello world!</string>
 
